feat: implement shop order management system and internationalization support